--- a/crowdwalk/README.jp
+++ b/crowdwalk/README.jp
@@ -1,6 +1,6 @@
 # README
 
-                           README file for CrowdWalk
+                           README file for CrowdWalk (2)
 
 ===============================================================================
 1. Intro
